<resources>
    <string name="app_name">Login Register</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="enter_adhaar">Adhaar</string>
    <string name="hint_voterId">VoterId</string>
    <string name="enter_phone">Phone Number</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="votes">No. of Votes</string>
    <string name="Results">Results</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_voterId_exists">VoterId Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="error_secret_key">Incorrect Secret Key</string>
    <string name="error_message_adhaar">Enter Valid Adhaar</string>
    <string name="error_message_voterId">Enter Valid VoterId</string>
    <string name="error_message_phone">Enter Valid Phone</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="registration_closed">Registration Closed</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="constituency_name">Select Constituency</string>
    <string name="hint_constituency">Constituency</string>
    <string-array name="constituency_list">
        <item>Bangalore</item>
        <item>Belagavi</item>
        <item>Gulbarga</item>
        <item>Mysore</item>
    </string-array>
</resources>
